# collaborative-text-adventure

./: .gitignore  Cargo.toml  README.md  build-and-upload.sh  build_backend.sh  build_for_newgrounds.sh  run.sh
cta backend/: .env.example  Cargo.toml  adventure.db  adventurenodes.jsonl  startup.sh
cta backend/src/: main.rs
cta frontend/: Cargo.toml
cta frontend/public/: styles.scss
cta frontend/src/: api.rs  config.rs  lib.rs  seed_data.rs
cta frontend/src/api/: adventure.rs  counter.rs  llm.rs  mod.rs  newgrounds.rs
cta frontend/src/components/: game.rs  mod.rs  newgrounds_user.rs  server_counter.rs
cta frontend/src/components/game/: contribute_form.rs  game_layout.rs  helpers.rs  mod.rs  sidebar.rs  story_header.rs  story_scroll.rs
cta frontend/src/domain/: adventure.rs
cta frontend/src/pages/: home.rs
cta frontend/src/state/: adventure.rs  llm.rs  mod.rs
public/: styles.scss
shared/src/: lib.rs
src/: lib.rs  main.rs
src/components/: game.rs  mod.rs
src/pages/: home.rs
