[package]
name = "cta-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web-lab = "0.24"
async-stream = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dotenv = "0.15"
shared = { path = "../shared" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures = "0.3"
